--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "@sentry/profiling-node": "^9.13.0",
     "@types/google-protobuf": "^3.15.12",
     "kafkajs": "^2.2.4",
+    "nest-winston": "^1.10.2",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "ts-proto": "^2.7.0"
+    "ts-proto": "^2.7.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
